# atm_talib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cookbook.md  description.yml  extension_config.cmake  index.md  vcpkg.json
.github/workflows/: main.yml  release.yml
docs/: index.md
docs/superpowers/plans/: 2026-04-15-duckdb-talib-extension.md  2026-04-19-multi-output-aggregate.md  2026-04-20-multi-output-window-functions.md
docs/superpowers/specs/: 2026-04-15-duckdb-talib-extension-design.md  2026-04-19-multi-output-aggregate-design.md  2026-04-20-multi-output-window-functions-design.md
src/: talib_adapter.cpp  talib_aggregate.cpp  talib_extension.cpp  talib_multi_output.cpp  talib_multi_output_agg.cpp  talib_scalar.cpp
src/include/: talib_adapter.hpp  talib_extension.hpp  talib_functions.hpp
test/sql/: test_momentum.test  test_multi_output.test  test_multi_output_agg.test  test_null_handling.test  test_overlap.test  test_partition.test  test_pattern.test  test_scalar.test  test_smoke.test  test_volume.test
